# codepilot-ai

./: .env.example  .gitignore  README.md  pyproject.toml  temp_test.py  test_chunker.py  test_chunking_service.py  test_config.py  test_loader.py  test_reader.py  test_service.py
app/: main.py
app/api/: routes.py
app/chunking/: chunker.py  chunking_service.py
app/core/: config.py  logging.py
app/repository/: file_reader.py  repository_loader.py  repository_service.py
